# izkaypro

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: rust-clippy.yml
disks/: CalcStar.img  Diagnostics.img  Games.img  KUG18Diagnostics.img  KUG34Games.img  MBasic.img  PerfectCalc.img  PerfectCalc10.img  PerfectWriterAndSpeller.img  PerfectWriterLessons.img  PerfectWriterUtils.img  ProfitPlan.img  ProfitPlan102.img  SelectWPMaster.img  SelectWPTeachAndInstall.img  TextEditorSP.img  TurboPascal_301A.img  WordStar33.img  Zork.img  cpm22-gm272.img  cpm22-kaypro4-blank.img  cpm22-kaypro4.img  cpm22-rom149.img  cpm22-rom232.img  cpm22-sp272.img  kayproii.img
doc/: disk_images.md
playground/: .gitignore  README.md  blank.img  build.sh  echo.s  run.sh
roms/: 81-188e.rom  81-277.rom  81-292a.rom  81-302c.rom  81-326.rom  81-478a.rom  81-478b.rom  81-478c.rom  kplus83.rom  kplus84.rom  pro884mx.rom
src/: floppy_controller.rs  kaypro_machine.rs  keyboard_unix.rs  main.rs  media.rs  screen.rs
